# mailagent

./: .gitignore  .tool-versions  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  mailserver.env.example  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  schema.json  setup.sh
.github/workflows/: publish.yml
agent/: .env.example  Dockerfile  classifier.py  config.yml  llm.py  mailer.py  main.py  parser.py  requirements-test.txt  requirements.txt  workflows.py
agent/tests/: conftest.py  test_blocklist.py  test_classifier.py  test_parser.py
agent/tests/fixtures/: html_only.eml  multipart.eml  noreply.eml  plain.eml
docker/: Dockerfile.core  Dockerfile.ui
docs/: api.md  configuration.md  setup.md
examples/: README.md  docker-compose.test.yml  docker-compose.yml  mailagent.minimal.yml  mailagent.yml
scratchpad/: monorepo-refactor.md
scripts/: inject-test-email.sh
services/core/: pyproject.toml  schema.test.json
services/core/docs/: configuration.md
services/core/examples/: README.md  docker-compose.test.yml  docker-compose.yml  mailagent.minimal.yml  mailagent.starter.yml  mailagent.test.yml
services/core/scripts/: certbot-renew.sh
services/core/src/mailagent/: cli.py  config.py  provisioner.py
services/core/src/mailagent/api/: __init__.py
services/core/src/mailagent/core/: classifier.py  parser.py  state.py  watcher.py  workflows.py
services/core/src/mailagent/testing/: __init__.py  inbucket.py  runner.py  (+1 more)
services/core/tests/: test_api.py  test_classifier.py  test_config.py  test_parser.py  test_providers.py  test_state.py  test_watcher.py  test_workflows.py
services/core/tests/fixtures/: html_only.eml  multipart.eml  non_utf8.eml
services/ui/: Dockerfile  package.json
services/ui/app/chat/: page.tsx
services/ui/app/inboxes/: page.tsx
services/ui/app/providers/: page.tsx
services/ui/app/settings/: page.tsx
services/ui/components/: app-sidebar.tsx
services/ui/components/inboxes/: create-inbox-dialog.tsx  delete-inbox-dialog.tsx  edit-inbox-dialog.tsx  workflow-card.tsx
services/ui/components/ui/: sidebar.tsx
services/ui/lib/: api-client.ts
src/mailagent/: __init__.py  classifier.py  cli.py  config.py  mailer.py  provisioner.py  setup_wizard.py  state.py  watcher.py  workflows.py
src/mailagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mailagent/api/: __init__.py  auth.py  models.py
src/mailagent/api/routes/: emails.py  health.py  inboxes.py  providers.py  workflows.py
src/mailagent/providers/: __init__.py  anthropic.py  gemini.py  groq.py  openai.py  openrouter.py
src/mailagent/testing/: generator.py  reporter.py  runner.py
src/mailagent/utils/: logging.py
tests/: conftest.py  test_api.py  test_api_auth.py  test_classifier.py  test_config_manager.py  test_parser.py  test_provisioner.py  test_state.py  test_watcher.py  test_workflows.py
tests/fixtures/: api_config.yml  mailing_list.eml  plain_text.eml
web/: .gitignore  package.json  pnpm-lock.yaml
web/app/: layout.tsx  page.tsx
web/app/inboxes/: page.tsx
web/app/inboxes/[address]/: page.tsx
web/app/providers/: page.tsx
web/components/chat/: chat-interface.tsx  chat-settings.tsx
web/components/emails/: compose-email.tsx
web/components/inboxes/: create-workflow-dialog.tsx  edit-inbox-dialog.tsx  workflow-card.tsx
web/components/providers/: create-provider-dialog.tsx
web/hooks/: use-api.ts
web/lib/: api-client.ts  types.ts
(+5 files in other folders)
